--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cc12703m/element-plus-cron",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "cron editor vue component for element-plus",
   "main": "dist/cron-editor.umd.js",
   "module": "dist/cron-editor.mjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "ptonpm": "npm publish --access public",
+    "pub": "npm publish --access public",
     "preview": "vite preview"
   },
   "dependencies": {
